feat: Update image hosting URLs
The image hosting location for portfolio assets has been updated. This change ensures that the retro portfolio website correctly references the new URLs for its visual elements.

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                         <!-- Left Image (New) -->
                         <div class="about-image-container left-image reveal">
                             <div class="parallax-wrapper" data-speed="0.04">
-                                <img src="https://sakshamshrestha.com.np/cybergirl-1.jpg" alt="Saksham Retro Style 1" class="profile-image style-green" onerror="this.style.display='none'">
+                                <img src="https://saksham-shrestha-n22rf.kinsta.page/cybergirl-1.jpg" alt="Saksham Retro Style 1" class="profile-image style-green" onerror="this.style.display='none'">
                             </div>
                         </div>
 
@@ -757,7 +757,7 @@
                         <!-- Right Image (Existing) -->
                         <div class="about-image-container right-image reveal">
                             <div class="parallax-wrapper" data-speed="-0.04">
-                                <img src="https://sakshamshrestha.com.np/cybergirl-2.jpg" alt="Saksham Retro Style 2" class="profile-image style-pink" onerror="this.style.display='none'">
+                                <img src="https://saksham-shrestha-n22rf.kinsta.page/cybergirl-2.jpg" alt="Saksham Retro Style 2" class="profile-image style-pink" onerror="this.style.display='none'">
                             </div>
                         </div>
                     </div>
