refactor: Update contact information
Correct the email address and GitHub username in the contact section to reflect the user's current details.

--- a/index.html
+++ b/index.html
@@ -795,8 +795,8 @@
                     <div class="reveal" style="margin-top: 3rem; border-top: 1px dashed #00FF00; padding-top: 1rem;">
                         <p style="font-size: 0.9rem; opacity: 0.8;">// ALTERNATE_CHANNELS</p>
                         <ul class="terminal-list">
-                            <li>&gt; EMAIL: <a href="mailto:saksham@example.com">saksham@example.com</a></li>
-                            <li>&gt; GITHUB: @SakshamShrestha</li>
+                            <li>&gt; EMAIL: <a href="mailto:saks.coolboy@gmail.com">saks.coolboy@gmail.com</a></li>
+                            <li>&gt; GITHUB: @sakshamshrestha2</li>
                         </ul>
                     </div>
                 </section>
